--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,17 +10,18 @@
 }
 .daohang{
    margin-top: 100px;
-    margin-left: 280px;
+    margin-left: 120px;
+    margin-bottom: 20px;
 }
 .zj{
     margin-left: 80px;
     width: 821px;
-    height: 582px;
+
 }
 .yb{
    /* margin-left: 900px;
     margin-top: -521px;*/
-
+    margin-top: 175px;
     width: 410px;
 }
 .fy{
