--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,18 +1,14 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>model</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-   <!-- -&#45;&#45;-->
+<!doctype html>
+<html>
+<meta charset="UTF-8">
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="renderer" content="webkit">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="../static/css/layui/css/layer.css" media="all" />
-</head>
-<body class="childrenBody">
+<title>404</title>
 <div style="text-align: center; padding:11% 0;">
-    <i class="layui-icon" style="line-height:20rem; font-size:20rem; color: #393D50;">&#xe61c;</i>
-    <p style="font-size: 20px; font-weight: 300; color: #999;">我勒个去，页面被外星人挟持了!</p>
+    <img src="../static/css/imgs/2.png" >
 </div>
-
-</body>
-
 </html>
