--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,19 +18,18 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">首页</a>
+            <a class="navbar-brand" href="#/">首页</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-                <li><a href="#">首页</a></li>
-                <li><a href="#">博客</a></li>
-                <li><a href="#">资源屋 </a></li>
-                <li><a href="#">关于我 </a></li>
+                <li><a href="#/">SYJ社区</a></li>
+                <li><a href="#/write">写博客</a></li>
+                <li><a href="#">传资源 </a></li>
+                <li><a href="#">关于社区 </a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right" ng-if="!userinfo">
-
                 <li><a data-toggle="modal" data-target="#login" >登陆</a></li>
                 <li><a data-toggle="modal" data-target="#rigister">注册</a></li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
@@ -45,109 +44,14 @@
     </div>
 </nav>
 <div>
-    <div class=" daohang ">
-        <form class="form-inline">
-            <select>
-                <option>文章</option>
-                <option>作者</option>
-                <option>分类</option>
-                <option>资源</option>
-            </select>
-            <div class="form-group">
-                <input id="form-control" type="text">
-            </div>
-            <button type="submit" class="btn btn-default" style="height: 35px;width: 60px;font-size: 16px;color: black;" >搜索</button>
-        </form>
-    </div>
-    <div class="zj z">
-        <table class="table table-bordered ">
-
-            <tr >
-                <td class="yczt active"><span class="label label-success" >最近更新</span></td>
-            </tr>
-
-            <tr class="success" ng-repeat="v in blog">
-                <td>
-                    <h4>[{{v.blogsStatus==1?'原创':'转载'}}]{{v.blogsName}}</h4>
-                    <div>{{v.userName}} {{v.blogsDate|date:"yyyy-MM-dd HH:mm:ss"}} 阅读{{v.blogsClick}}次</div>
-                </td>
-            </tr>
-
-        </table>
-        <nav class="fy" aria-label="Page navigation">
-            <ul class="pagination">
-                <li>
-                    <a href="#" aria-label="Previous">
-                        <span aria-hidden="true" ng-click="page(1)">首页</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" aria-label="Previous">
-                        <span aria-hidden="true" ng-click="page1()">上一页</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" aria-label="Previous">
-                        <span aria-hidden="true" ng-click="page2()">下一页</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" aria-label="Next">
-                        <span aria-hidden="true" ng-click="page(maxSize)">尾页</span>
-                    </a>
-                </li>
-                <li>
-
-                    <span aria-hidden="true">当前{{pageNum}}/{{maxSize}}页</span>
-
-                </li>
-            </ul>
 
 
-        </nav>
-    </div>
-    <div class="yb z">
-        <table class="table table-bordered ">
 
-            <tr class="active">
-                <td class="yczt"><span class="label label-success ">本站公告</span></td>
-            </tr>
-            <tr class="success">
-                <td>
-                    <h4 ng-repeat="a in ann">
-                        <a data-toggle="modal" data-target="#gonggao" ng-click="gonggao(a.announcementContext)">
-                            {{a.announcementTitle}}</a>
-                    </h4>
-                </td>
-            </tr>
-            <tr class="active">
-                <td class="yczt"><span class="label label-success">热门博客</span></td>
-            </tr>
-            <tr class="success">
-                <td class="yczt">
-                    <h4>标题</h4>
-                    <h4>标题</h4>
-                    <h4>标题</h4>
-                    <h4>标题</h4>
+        <div ng-view>
+            <img src="../static/css/imgs/2.png">
+        </div>
 
-                </td>
-            </tr>
-            <tr class="active">
-                <td class="yczt"><span class="label label-success">热门资源</span></td>
-            </tr>
-            <tr class="success">
-                <td>
-                    <h4>标题</h4>
-                    <h4>标题</h4>
-                    <h4>标题</h4>
-                    <h4>标题</h4>
 
-                </td>
-            </tr>
-
-        </table>
-    </div>
 </div>
 <div class="ds">
 
@@ -355,7 +259,7 @@
 
 
 <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
-<script src="http://code.angularjs.org/1.2.9/angular-cookies.min.js"></script>
+<script src="http://code.angularjs.org/1.2.9/angular-route.js"></script>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
